--- a/Index.html
+++ b/Index.html
@@ -272,7 +272,7 @@ var options = {
     
     <body>
         <div class='liveExample' align='center'>
-            <div class="container" style="margin-left:6px; margin-right:6px;">
+            <div class="container" style="margin-left:3px; margin-right:3px;">
 				<div class="row">
 					<div  class="col-xs-12 col-md-6">
 						<form role="form">
@@ -435,7 +435,7 @@ var options = {
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6" style="padding-top:30px;">
-						<div id="chartCategories" ></div>
+						<div id="chartCategories" style="min-width:250px; min-height:300px;"></div>
 					</div>
 				</div>
 			</div>
