--- a/Index.html
+++ b/Index.html
@@ -435,7 +435,7 @@ var options = {
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6" style="padding-top:30px;">
-						<div id="chartCategories" style="min-width:250px; min-height:300px;"></div>
+						<div id="chartCategories" style="min-width:250px; max-width:400px; min-height:300px; max-height:400px;"></div>
 					</div>
 				</div>
 			</div>
